syntax = "proto3";

package ai.lzy.v1.allocator;

option java_outer_classname = "DiskServiceApi";
option java_package = "ai.lzy.v1.allocator";

import "ai/lzy/v1/allocator/disk.proto";
import "ai/lzy/v1/operation-service/operation.proto";
import "ai/lzy/v1/operation-service/option.proto";


service DiskService {
  rpc CreateDisk (CreateDiskRequest) returns (ai.lzy.v1.Operation) {
    option (ai.lzy.v1.operation) = {
      metadata: "CreateDiskMetadata"
      response: "CreateDiskResponse"
    };
  }

  rpc CloneDisk (CloneDiskRequest) returns (ai.lzy.v1.Operation) {
    option (ai.lzy.v1.operation) = {
      metadata: "CloneDiskMetadata"
      response: "CloneDiskResponse"
    };
  }

  rpc DeleteDisk (DeleteDiskRequest) returns (ai.lzy.v1.Operation) {
    option (ai.lzy.v1.operation) = {
      metadata: "DeleteDiskMetadata"
      response: "DeleteDiskResponse"
    };
  }
}

message CreateDiskRequest {
  DiskSpec disk_spec = 1;
  string zone_id = 2;
}

message CreateDiskMetadata {
  string disk_id = 1;
}

message CreateDiskResponse {
  Disk disk = 1;
}

message CloneDiskRequest {
  string disk_id = 1;
  DiskSpec new_disk_spec = 2;
  string zone_id = 3;
}

message CloneDiskMetadata {
  string disk_id = 1;
}

message CloneDiskResponse {
  Disk disk = 1;
}

message DeleteDiskRequest {
  string disk_id = 1;
}

message DeleteDiskMetadata {
  string disk_id = 1;
}

message DeleteDiskResponse {}
